--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,26 +1,16 @@
-<h1><%= @cocktail.name %></h1>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('http://wallpapersdsc.net/wp-content/uploads/2016/09/Cocktail-HD-Wallpaper-300x190.jpg');">
+  <div class="banner-content">
+   <h1> <%= @cocktail.name %> composition : </h1>
+   <% @cocktail.doses.each do |dose| %>
+   <li> <%= dose.description %> <%=dose.ingredient.name%> </li>
+   <% end %>
 
-
-<div class="container">
-
-  <% @cocktail.doses.each do |dose| %>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-8">
-          <p><%= dose.ingredient.name %></p>
-          <p><%= dose.description %></p>
-          <%= link_to "delete", dose_path(dose), method: :delete, class: "btn btn-primary" %>
-        </div>
-      </div>
-    </div>
-  <% end %>
-  <%= link_to "< back", cocktails_path %>
-<%= link_to "Add ingredient", new_cocktail_dose_path(@cocktail) %>
+ </div>
+</div>
+<div
+<a class="card-link" href="#" ></a>
 </div>
 
+<%= link_to "Add Dose", new_cocktail_dose_path(params[:id]) %> <br />
 
-
-
-
-
-
+<%= link_to "Back to cocktail", cocktails_path %>
